<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="@color/transparent"
        card_view:cardCornerRadius="4dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/book_pic"
            android:layout_margin="5dp"
            android:src="@drawable/ic_book"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bookTitle"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/title_book"
            android:textColor="@color/white"
            android:textSize="20sp"
            card_view:layout_constraintEnd_toStartOf="@+id/bookScore"
            card_view:layout_constraintStart_toEndOf="@+id/bookCover"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bookAuthor"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/book_author"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="17sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/bookCover"
            card_view:layout_constraintTop_toBottomOf="@+id/bookTitle" />

        <TextView
            android:id="@+id/bookOpinion"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:text="@string/opinion"
            android:textColor="@color/purple_200"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/bookCover"
            card_view:layout_constraintTop_toBottomOf="@+id/bookAuthor"
            card_view:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/bookScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/maxScore"
            android:textColor="@color/white"
            android:textSize="20sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>